--- a/src/styles.css
+++ b/src/styles.css
@@ -161,6 +161,9 @@ html {
 
 .dub-item {
     color: light-dark(#666, var(--dark-text-color));
+    padding: 2rem;
+    border: 1px solid light-dark(#c1c1c1, var(--dark-border-color));
+    margin-top: 2rem;
     .dub-item-name {
         font-size: 1.5rem;
         line-height: 2rem;
@@ -223,8 +226,8 @@ html {
             max-width: 50px;
             text-align: center;
             border: none;
-            &:-webkit-outer-spin-button,
-            &:-webkit-inner-spin-button {
+            &::-webkit-outer-spin-button,
+            &::-webkit-inner-spin-button {
                 -webkit-appearance: none;
                 appearance: none;
                 margin: 0;
@@ -235,10 +238,14 @@ html {
         background: light-dark(var(--dub-color), var(--dark-bg-color));
         color: light-dark(var(--light-text-color), var(--dark-text-color));
         font-size: .875rem;
-        padding: .5rem 1.5rem;
+        padding: .8rem 2.5rem;
         border-radius: 4rem;
         white-space: nowrap;
-        border: 1px solid var(--dark-border-color);
+        border: 1px solid light-dark(var(--dark-text-color), var(--dark-border-color));
+        cursor: pointer;
+        &:hover {
+            filter: brightness(0.6);
+        }
     }
     .text-error {
         color: var(--red-color);
