--- a/src/styles.css
+++ b/src/styles.css
@@ -164,6 +164,9 @@ html {
     padding: 2rem;
     border: 1px solid light-dark(#c1c1c1, var(--dark-border-color));
     margin-top: 2rem;
+    background: url(https://rocioshop.com/promo/_astro/sognare-product.ykxzLmpA.webp) no-repeat right;
+    background-size: 50%;
+    border-radius: .5rem;
     .dub-item-name {
         font-size: 1.5rem;
         line-height: 2rem;
@@ -211,7 +214,7 @@ html {
             background-color: light-dark(#f1f5f9, #28292a);
             color: #94a3b8;
             text-align: center;
-            padding: .5rem 1rem 0;
+            padding: .625rem 1rem;;
             border: 1px solid light-dark(#d1d5db, var(--dark-border-color));
             border-radius: .5rem;
             max-width: 50px;
@@ -221,6 +224,7 @@ html {
             }
         }
         .dub-item-quantity-input {
+            background-color: #f9fafb;
             -moz-appearance: textfield;
             appearance: textfield;
             max-width: 50px;
@@ -236,9 +240,9 @@ html {
     }
     .dub-item-button {
         background: light-dark(var(--dub-color), var(--dark-bg-color));
-        color: light-dark(var(--light-text-color), var(--dark-text-color));
+        color: var(--dark-text-color);
         font-size: .875rem;
-        padding: .8rem 2.5rem;
+        padding: 0.8rem 2.5rem;
         border-radius: 4rem;
         white-space: nowrap;
         border: 1px solid light-dark(var(--dark-text-color), var(--dark-border-color));
