--- a/src/styles.css
+++ b/src/styles.css
@@ -157,104 +157,124 @@ html {
     --light-text-color: #333;
     --red-color: #ef4444;
     --dub-color: #ff6b00;
+    --border-color: #c1c1c1;
+    --border-tags-color: #d1d5db;
+    --bg-tags-color: #f1f5f9;
+    --text-color: #666;
+    --select-bg-color: #f9fafb;
 }
 
 .dub-item {
-    color: light-dark(#666, var(--dark-text-color));
     padding: 2rem;
-    border: 1px solid light-dark(#c1c1c1, var(--dark-border-color));
-    margin-top: 2rem;
-    background: url(https://rocioshop.com/promo/_astro/sognare-product.ykxzLmpA.webp) no-repeat right;
-    background-size: 50%;
+    border: 1px solid light-dark(var(--border-color), var(--dark-border-color));
+    margin: 2rem 0;
+    color: light-dark(var(--text-color), var(--dark-text-color));
     border-radius: .5rem;
-    .dub-item-name {
-        font-size: 1.5rem;
-        line-height: 2rem;
-        font-weight: bold;
+    &.grid {
+        display: grid;
+        &.grid-2 {
+            grid-template-columns: 1fr 1fr;
+        }
+        &.gap-2 {
+            gap: 2rem;
+        }
     }
-    .dub-item-description {
-        font-size: .75rem;
-        line-height: 1.25rem;
-        padding-top: .5rem;
-    }
-    .dub-item-price {
-        font-size: 1.875rem;
-        line-height: 2.25rem;
-        font-weight: 300;
-        padding-top: .5rem;
-    }
-    .dub-item-legend {
-        font-size: .75rem;
-        line-height: 1rem;
-        padding-bottom: 1.25rem;
-    }
-    .dub-item-variant-container {
-        padding-top: .75rem;
-        padding-bottom: 1.25rem;
-    }
-    .dub-item-variant-select {
-        display: block;
-        background-color: light-dark(#f9fafb, #28292a);
-        font-size: .875rem;
-        line-height: 1.25rem;
-        padding: .625rem;
-        border: 1px solid light-dark(#d1d5db, var(--dark-border-color));
-        border-radius: .5rem;
-        appearance: none;
-    }
-    .dub-item-quantity {
-        display: flex;
-        gap: .5rem;
-        padding-bottom: 1.75rem;
-        .dub-item-quantity-name {
+    .dub-item-content {
+        .dub-item-name {
+            font-size: 1.5rem;
+            line-height: 2rem;
+            font-weight: bold;
+        }
+        .dub-item-description {
+            font-size: .75rem;
+            line-height: 1.25rem;
+            padding-top: .5rem;
+        }
+        .dub-item-price {
+            font-size: 1.875rem;
+            line-height: 2.25rem;
+            font-weight: 300;
+            padding-top: .5rem;
+        }
+        .dub-item-legend {
+            font-size: .75rem;
+            line-height: 1rem;
+            padding-bottom: 1.25rem;
+        }
+        .dub-item-variant-container {
+            padding-top: .75rem;
+            padding-bottom: 1.25rem;
+        }
+        .dub-item-variant-select {
+            display: block;
+            background-color: light-dark(var(--select-bg-color), var(--dark-bg-color));
             font-size: .875rem;
             line-height: 1.25rem;
-        }
-        .dub-item-quantity-add,
-        .dub-item-quantity-remove {
-            background-color: light-dark(#f1f5f9, #28292a);
-            color: #94a3b8;
-            text-align: center;
-            padding: .625rem 1rem;;
-            border: 1px solid light-dark(#d1d5db, var(--dark-border-color));
+            padding: .625rem;
+            border: 1px solid light-dark(var(--border-tags-color), var(--dark-border-color));
             border-radius: .5rem;
-            max-width: 50px;
-            span {
-                font-size: 1.125rem;
-                line-height: 1.75rem;
+            appearance: none;
+        }
+        .dub-item-quantity {
+            display: flex;
+            gap: .5rem;
+            padding-bottom: 1.75rem;
+            .dub-item-quantity-name {
+                font-size: .875rem;
+                line-height: 1.25rem;
+            }
+            .dub-item-quantity-add,
+            .dub-item-quantity-remove {
+                background-color: light-dark(var(--bg-tags-color), var(--dark-bg-color));
+                color: #94a3b8;
+                text-align: center;
+                padding: .625rem 1rem;;
+                border: 1px solid light-dark(var(--border-tags-color), var(--dark-border-color));
+                border-radius: .5rem;
+                max-width: 50px;
+                span {
+                    font-size: 1.125rem;
+                    line-height: 1.75rem;
+                }
+            }
+            .dub-item-quantity-input {
+                background-color: light-dark(var(--select-bg-color), var(--dark-bg-color));
+                -moz-appearance: textfield;
+                appearance: textfield;
+                max-width: 50px;
+                text-align: center;
+                border: none;
+                border-radius: .5rem;
+                &::-webkit-outer-spin-button,
+                &::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    appearance: none;
+                    margin: 0;
+                }
             }
         }
-        .dub-item-quantity-input {
-            background-color: light-dark(#f9fafb, var(--dark-bg-color));
-            -moz-appearance: textfield;
-            appearance: textfield;
-            max-width: 50px;
-            text-align: center;
-            border: none;
-            border-radius: .5rem;
-            &::-webkit-outer-spin-button,
-            &::-webkit-inner-spin-button {
-                -webkit-appearance: none;
-                appearance: none;
-                margin: 0;
+        .dub-item-button {
+            background: light-dark(var(--dub-color), var(--dark-bg-color));
+            color: var(--dark-text-color);
+            font-size: .875rem;
+            padding: 0.8rem 2.5rem;
+            border-radius: 4rem;
+            white-space: nowrap;
+            border: 1px solid light-dark(var(--dark-text-color), var(--dark-border-color));
+            cursor: pointer;
+            &:hover {
+                filter: brightness(0.6);
             }
         }
-    }
-    .dub-item-button {
-        background: light-dark(var(--dub-color), var(--dark-bg-color));
-        color: var(--dark-text-color);
-        font-size: .875rem;
-        padding: 0.8rem 2.5rem;
-        border-radius: 4rem;
-        white-space: nowrap;
-        border: 1px solid light-dark(var(--dark-text-color), var(--dark-border-color));
-        cursor: pointer;
-        &:hover {
-            filter: brightness(0.6);
+        .text-error {
+            color: var(--red-color);
         }
     }
-    .text-error {
-        color: var(--red-color);
+    .dub-item-img {
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 1rem;
+        }
     }
 }
-
